# omarchy-config

./: .gitignore  .mise.toml  README.md  VM.md  pass.md  skills-lock.json
dotfiles/alacritty/: README.md
dotfiles/alacritty/.config/alacritty/: alacritty.toml
dotfiles/fish/: README.md
dotfiles/fish/.config/fish/: config.fish
dotfiles/git/: README.md
dotfiles/git/.config/git/: config
dotfiles/hypr/: .stow-local-ignore  README.md
dotfiles/hypr/.config/hypr/: autostart.conf  bindings.conf  hypridle.conf  hyprland.conf  input.conf  lock-and-clear-gpg.sh  looknfeel.conf  monitors.conf  omarchy-defaults.conf  plugins.conf  setup-fonts.sh
dotfiles/mise/.config/mise/: config.toml
dotfiles/omarchy/: README.md
dotfiles/omarchy/.config/omarchy/themes/aether/: aether.override.css  alacritty.toml  btop.theme  chromium.theme  ghostty.conf  hyprland.conf  hyprlock.conf  kitty.conf  mako.ini  neovim.lua  swayosd.css  walker.css  warp.yaml  waybar.css  wofi.css
dotfiles/opencode/: .stow-local-ignore  README.md
dotfiles/starship/: README.md
dotfiles/uwsm/: README.md
dotfiles/uwsm/.config/uwsm/: default
dotfiles/waybar/: README.md
dotfiles/waybar/.config/waybar/: config.jsonc  style.css
dotfiles/waybar/.config/waybar/indicators/: nightlight.sh  tailscale.sh  touchpad.sh
scripts/: deploy.sh  stow.sh  vm.sh
scripts/keybinding/: README.md  export_keybindings.py  index.html  keybindings.json  keyboard.css  keyboard.js  pyproject.toml
scripts/keybinding/src/keybinding_tool/: __init__.py  cli.py  exporter.py  server.py
