[project]
name = "keybinding-tool"
version = "0.1.0"
description = "Hyprland keybinding exporter and local UI server"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
keybinding = "keybinding_tool.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
